<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.android.quiz.MainActivity">

        <!-- Insert Name -->

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_name"
            android:textAlignment="center"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>

        <!-- Question 1 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:textAllCaps="true"
            android:textSize="@dimen/questionTextSize"
            android:fontFamily="arial"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@string/question_1_ask'
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_2dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:padding="@dimen/margin_4dp">

            <!-- Question 1 - Answer 1 -->
            <RadioButton
                android:id="@+id/q1_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_1"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginRight="@dimen/margin_8dp"/>

            <!-- Question 1 - Answer 2 -->
            <RadioButton
                android:id="@+id/q1_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_2"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginRight="@dimen/margin_8dp"
                />

            <!-- Question 1 - Answer 3 -->
            <RadioButton
                android:id="@+id/q1_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_3"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginRight="@dimen/margin_8dp" />

            <!-- Question 1 - Answer 4 -->
            <RadioButton
                android:id="@+id/q1_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1_answer_4"
                android:textSize="@dimen/answerTextSize" />

        </RadioGroup>

        <!-- Question 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:textAllCaps="true"
            android:textSize="@dimen/questionTextSize"
            android:fontFamily="arial"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_4dp" />

        <!-- Question 2 - Ask -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2_ask"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp">

            <!-- Question 2 - Answer 1 -->
            <RadioButton
                android:id="@+id/q2_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_answer_1"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:paddingBottom="@dimen/margin_4dp"/>

            <!-- Question 2 - Answer 2 -->
            <RadioButton
                android:id="@+id/q2_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_answer_2"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:paddingBottom="@dimen/margin_4dp"/>

            <!-- Question 2 - Answer 3 -->
            <RadioButton
                android:id="@+id/q2_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_answer_3"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:paddingBottom="@dimen/margin_4dp"/>

            <!-- Question 2 - Answer 4 -->
            <RadioButton
                android:id="@+id/q2_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2_answer_4"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:paddingBottom="@dimen/margin_4dp"/>

        </RadioGroup>
        <!-- Question 3 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:textAllCaps="true"
            android:textSize="@dimen/questionTextSize"
            android:fontFamily="arial"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>
        <!-- Question 3 - Ask -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3_ask"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp" />

        <!-- Question 3 - Answer -->
        <EditText
            android:id="@+id/q3_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_answer"
            android:textSize="@dimen/answerTextSize"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"/>

        <!-- Question 4 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            android:textAllCaps="true"
            android:textSize="@dimen/questionTextSize"
            android:fontFamily="arial"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>

        <!-- Question 4 - Ask -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/question_4_ask"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp" />

        <!-- Question 4 - Answer -->
        <EditText
            android:id="@+id/q4_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText_answer"
            android:textSize="@dimen/answerTextSize"
            android:layout_marginLeft="@dimen/margin_4dp"
            android:layout_marginRight="@dimen/margin_4dp"/>

        <!-- Question 5 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:textAllCaps="true"
            android:textSize="15sp"
            android:fontFamily="arial"
            android:textColor="@android:color/black"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>

        <!-- Question 5 - Ask -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5_ask"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_2dp"
            android:layout_marginBottom="@dimen/margin_4dp">

            <!-- Question 5 - Answer 1 -->
            <CheckBox
                android:id="@+id/q5_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_answer_1"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_1dp"
                android:layout_marginRight="@dimen/margin_4dp"/>

            <!-- Question 5 - Answer 2 -->
            <CheckBox
                android:id="@+id/q5_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_answer_2"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_1dp"
                android:layout_marginRight="@dimen/margin_4dp"/>

            <!-- Question 5 - Answer 3 -->
            <CheckBox
                android:id="@+id/q5_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_answer_3"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:layout_marginRight="@dimen/margin_4dp"/>

            <!-- Question 5 - Answer 4 -->
            <CheckBox
                android:id="@+id/q5_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5_answer_4"
                android:textSize="@dimen/answerTextSize"
                android:layout_marginTop="@dimen/margin_2dp"
                android:layout_marginRight="@dimen/margin_4dp" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:onClick="submitQuiz" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"/>

    </LinearLayout>

</ScrollView>